cmake_minimum_required(VERSION 4.0)
project(week4_lab2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(week4_lab2
        problem13.cpp
        problem14.cpp
        problem15.cpp
        problem16.cpp
        problem17.cpp
        problem18.cpp
        problem19.cpp
        problem20.cpp
        problem21.cpp
        problem22.cpp
        problem23.cpp
        problem24.cpp)
